Bug 366206 - Left panel of Kontact does not fit properly in left space of Kontact
Summary: Left panel of Kontact does not fit properly in left space of Kontact
Status: RESOLVED FIXED
Alias: None
Product: kontactinterface
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-28 13:30 UTC by Freek de Kruijf
Modified: 2016-08-04 06:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.0
Sentry Crash Report:


Attachments
Screenshot (13.11 KB, image/png)
2016-07-28 13:36 UTC, Freek de Kruijf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Freek de Kruijf 2016-07-28 13:30:52 UTC
See picture. The panel in which to choose between i.e. KMail or Adresses is not properly aligned in the reserved space. There is unoccupied space on the right and the subwindow with icons is too small.

Reproducible: Always
Comment 1 Freek de Kruijf 2016-07-28 13:36:07 UTC
Created attachment 100351 [details]
Screenshot
Comment 2 Laurent Montel 2016-08-04 06:55:43 UTC
Git commit e2dd3cd963461d91de3b593804cfef8524a05812 by Montel Laurent.
Committed on 04/08/2016 at 06:55.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 366206 - Left panel of Kontact does not fit properly in left space of Kontact

FIXED-IN: 5.3.0

M  +5    -3    kontact/src/iconsidepane.cpp
M  +1    -2    kontact/src/sidepanebase.cpp

http://commits.kde.org/kdepim/e2dd3cd963461d91de3b593804cfef8524a05812