Fix Bug 366206 - Left panel of Kontact does not fit properly in left space of Kontact

FIXED-IN: 5.3.0
BUG: 366206